<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/corFundoapp">

    <EditText android:id="@+id/nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corFundonota"
        android:gravity="center"
        android:hint="@string/nota_1"
        android:inputType="number"
        android:maxLength="2"
        android:padding="20dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"/>

    <EditText android:id="@+id/nota3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corFundonota"
        android:gravity="center"
        android:hint="@string/nota_3"
        android:inputType="number"
        android:maxLength="2"
        android:padding="20dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/nota1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"/>

    <EditText android:id="@+id/nota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corFundonota"
        android:gravity="center"
        android:hint="@string/nota_2"
        android:inputType="number"
        android:maxLength="2"
        android:padding="20dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"/>


    <EditText android:id="@+id/nota4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corFundonota"
        android:gravity="center"
        android:hint="@string/nota_4"
        android:inputType="number"
        android:maxLength="2"
        android:padding="20dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/nota2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"/>


    <EditText android:id="@+id/faltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corFundonota"
        android:gravity="center"
        android:hint="@string/numero_de_faltas"
        android:inputType="number"
        android:maxLength="2"
        android:padding="40dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/nota4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="90dp"/>

    <Button android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/faltas"
        android:text="@string/calcular"
        android:backgroundTint="@color/corFundonota"
        android:background="@color/cinza"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
       app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"

        android:layout_marginTop="50dp"/>



    <TextView android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        android:background="@color/cinza"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>












</androidx.constraintlayout.widget.ConstraintLayout>